# ERDDCI

./: README.md  erddci_w_ptp_recon.ipynb  ptp_utils.py  pyproject.toml  requirements.txt
ReconDataset/imagenetr-ti2i/: imagenetr-ti2i.py
ReconDataset/imagenetr-ti2i/recon_G1S50/: erddci_results_G1S50.txt
ReconDataset/wild-ti2i/: wild-ti2i.py
