[project]
name = "erddci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "diffusers>=0.33.1",
    "ftfy>=6.3.1",
    "lpips>=0.1.4",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "scikit-image>=0.25.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "aiohttp>=3.11.16",
    "ipywidgets>=8.1.6",
    "jupyterlab>=4.4.0",
    "notebook>=7.4.0",
]
